--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 title: Home
 ---
 
-<h2>Welcome</h2>
+<div class="title">
+    Catbus
+    <p class="lastmodified", id="last">
+        Last modified on:
+    </p>
 
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
+    <script language="Javascript">
+        lastMod = document.getElementById("last");
+        date = new Date(document.lastModified)
+        lastMod.innerText = "Last updated on " + date.toDateString() + ".";
+    </script>
+</div>
 
-<p>Welcome to my blog!</p>
-
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
-
-<h2>Posts</h2>
-$partial("templates/post-list.html")$
-
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p class="text">
+    Looks like you have found my website-- welcome! I am Parth, an undergraduate student at <a href="https://www.cai.cam.ac.uk">Gonville and Caius College</a>, <a href="https://cam.ac.uk">University of Cambridge</a>. I am currently studying part II (third year) of the <a href="https://www.maths.cam.ac.uk">Mathematics Tripos</a>, and serve as the President of <a href="https://archim.org.uk">the Archimedeans</a> (Cambridge University Mathematics Society). You can read more about me <a href="./about.html">here</a>. 
+</p>
+<p>
+    My mathematical interests range between functional analysis, algebraic geometry, and foundations. I document my thoughts and explorations in the form of articles <a href="./maths.html">here</a>, or as bite-sized gists <a href="./gists.html">here</a>. Hope something catches your interest! 
+</p>
