fixed a lot of things

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Home
+title: What is Parth up to?
 ---
 
 <div class="title">
@@ -16,10 +16,10 @@ title: Home
 </div>
 
 <p class="text">
-    Looks like you have found my website-- welcome! I am Parth, an undergraduate student at <a href="https://www.cai.cam.ac.uk">Gonville and Caius College</a>, <a href="https://cam.ac.uk">University of Cambridge</a>. I am currently studying part II (third year) of the <a href="https://www.maths.cam.ac.uk">Mathematics Tripos</a>, and serve as the President of <a href="https://archim.org.uk">the Archimedeans</a> (Cambridge University Mathematics Society). You can read more about me <a href="./about.html">here</a>. 
+    Looks like you have found my website-- welcome! I am Parth, an undergraduate student at <a href="https://www.cai.cam.ac.uk">Gonville and Caius College</a>, <a href="https://cam.ac.uk">University of Cambridge</a>. I am currently studying part II (third year) of the <a href="https://www.maths.cam.ac.uk">Mathematics Tripos</a>, and serve as the President of <a href="https://archim.org.uk">the Archimedeans</a> (Cambridge University Mathematics Society). You can read more about me <u><a href="./about.html">here</a></u>. 
 </p>
 <p>
-    My mathematical interests range between functional analysis, algebraic geometry, and foundations. I document my thoughts and explorations in the form of articles <u><a href="./maths.html">here</a></u>, or as bite-sized gists <u><a href="./gists.html">here</a></u>. Hope something catches your interest! 
+    My mathematical interests range between functional analysis, algebraic geometry, and foundations. I document my thoughts and explorations in the form of articles <u><a href="./posts.html">here</a></u>, or as bite-sized gists <u><a href="./gists.html">here</a></u>. Hope something catches your interest! 
 </p>
 <hr>
 <p>
