fixed home page links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: What is Parth up to?
 </div>
 
 <p class="text">
-    Looks like you have found my website-- welcome! I am Parth, an undergraduate student at <a href="https://www.cai.cam.ac.uk">Gonville and Caius College</a>, <a href="https://cam.ac.uk">University of Cambridge</a>. I am currently studying part II (third year) of the <a href="https://www.maths.cam.ac.uk">Mathematics Tripos</a>, and serve as the President of <a href="https://archim.org.uk">the Archimedeans</a> (Cambridge University Mathematics Society). You can read more about me <u><a href="./about.html">here</a></u>. 
+    Looks like you have found my website-- welcome! I am Parth, an undergraduate student at Gonville and Caius College <a href="https://www.cai.cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>, University of Cambridge <a href="https://cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>. I am currently studying part II (third year) of the Mathematics Tripos <a href="https://www.maths.cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>, and serve as the President of the Archimedeans <a href="https://archim.org.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> (Cambridge University Mathematics Society). You can read more about me <u><a href="./about.html">here</a></u>. 
 </p>
 <p>
     My mathematical interests range between functional analysis, algebraic geometry, and foundations. I document my thoughts and explorations in the form of articles <u><a href="./posts.html">here</a></u>, or as bite-sized gists <u><a href="./gists.html">here</a></u>. Hope something catches your interest! 
