Ported Sylver Coinage article

--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@ title: What is Parth up to?
 </p>
 <hr>
 <p>
-    <b>Right now:</b> I am in the middle of Lent term taking courses in Algebraic Topology, Algebraic Geometry, Logic and Set Theory, Graph Theory, and Analysis of Functions.
+    <sc>Right now:</sc> I am in the middle of Lent term taking courses in Algebraic Topology, Algebraic Geometry, Logic and Set Theory, Graph Theory, and Analysis of Functions.
 </p>
