--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@ title: What is Parth up to?
 </div>
 
 <p class="text">
-    Looks like you have found my website-- welcome! I am Parth, an undergraduate student at Gonville and Caius College <a href="https://www.cai.cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>, University of Cambridge <a href="https://cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>. I am currently studying part II (third year) of the Mathematics Tripos <a href="https://www.maths.cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>, and serve as the President of the Archimedeans <a href="https://archim.org.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> (Cambridge University Mathematics Society). You can read more about me <u><a href="./about.html">here</a></u>. 
+    Looks like you have found my website-- welcome! I am Parth, an undergraduate student at Gonville and Caius College <a href="https://www.cai.cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>, University of Cambridge <a href="https://cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>. I will shortly be beginning part III (fourth year) of the Mathematics Tripos <a href="https://www.maths.cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>. I serve as the President of the Archimedeans <a href="https://archim.org.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> (Cambridge University Mathematics Society) and the Vice President of CamTex <a href="http://camtex.soc.srcf.net/"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> . You can read more about me <u><a href="./about.html">here</a></u>. 
 </p>
 <p>
     My mathematical interests range between functional analysis, algebraic geometry, and foundations. I document my thoughts and explorations in the form of articles <u><a href="./posts.html">here</a></u>, or as bite-sized gists <u><a href="./gists.html">here</a></u>. Hope something catches your interest! 
 </p>
 <hr>
 <p>
-    <sc>Right now:</sc> I am in the middle of Lent term taking courses in Algebraic Topology, Algebraic Geometry, Logic and Set Theory, Graph Theory, and Analysis of Functions.
-</p>
+    <sc>Right now:</sc> I have finished the final year of the BA (Mathematics) degree at Cambridge and will be shortly beginning my MMath studies. In the meantime, I am studying the cohomology of the Tropical Hilbert Scheme as a summer project with Dr Dhruv Ranganathan (algebraic geometer, DPMMS). </p>
