--- a/index.html
+++ b/index.html
@@ -35,4 +35,6 @@ title: What is Parth up to?
 </p>
 <hr>
 <p>
-<sc>Course notes:</sc> I did Part III in Cambridge in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ"><u>here</u></a>.</p>
+<sc>Course Notes</sc>
+</p>
+<p>I did Part III in Cambridge in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ"><u>here</u></a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/"><u>here</u></a>.</p>
