--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@ title: What is Parth up to?
 </div>
 
 <p class="text">
-    Hello! I am Parth Shimpi, a first year PhD student at University of Glasgow <a href="https://www.gla.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> working with Michael Wemyss <a href="https://www.maths.gla.ac.uk/~mwemyss/"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> and his research group <a href="https://sites.google.com/view/erngglasgow/home"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>. 
-    </p>
-    <p>
-    Before this, I was at Gonville and Caius College <a href="https://www.cai.cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>, University of Cambridge <a href="https://cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> where I studied the Mathematics Tripos <a href="https://www.maths.cam.ac.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>, completing part III in 2022. I have served as the President of the Archimedeans <a href="https://archim.org.uk"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> (Cambridge University Mathematics Society) from 2020 to 2022. You can read more about me <u><a href="./about.html">here</a></u>. 
+Hello! I am <b>Parth Shimpi</b>, a PhD student in mathematics and a member of <a href="https://www.maths.gla.ac.uk/core/Welcome">Core Structures @ Glasgow</a> which encompasses researchers at the <a href="https://www.gla.ac.uk">University of Glasgow</a> working on Algebra, Analysis, Number theory, and Geometry & Topology.  
+You can read more about me <a href="./about.html">here</a>. 
 </p>
 <p>
-    My mathematical interests lie in (homological) algebra and algebraic geometry.
+I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> and the <a href="https://sites.google.com/view/erngglasgow/home">Enhancing RNG Group</a>, studying algebraic geometry and its interactions with representation theory and homological algebra.
 </p>
 <hr>
 <p>
     <sc>Mathematical Writing</sc> 
     <ul>
-        <li><b>Derived equivalences in algebra and geometry (2022)</b> <a href="https://1drv.ms/b/s!AjrujelXofEXgkZqWN0p6iX9SZvJ?e=sRnSwz">[PDF]</a> This was my Part III essay, set by Ian Grojnowski. It introduces derived categories of sheaves and modules and discusses two results concerning equivalences of derived categories-- Beilinson's theorem and Koszul duality.</li> 
-        <li><b>Finitely generated cones and associated moduli spaces (2021)</b> <a href="https://1drv.ms/b/s!AjrujelXofEXgkZqWN0p6iX9SZvJ?e=sRnSwz">[PDF]</a> This write-up summarises work done in a summer research project with Dan Townsend, supervised by Dhruv Ranganathan. It describes a construction of the moduli space of finitely many points on a line, in a way that brings to light its connection with the ring of quasi-symmetric functions.</li>
+        <li><b>Derived equivalences in algebra and geometry</b>  <a href="https://1drv.ms/b/s!AjrujelXofEXgkZqWN0p6iX9SZvJ?e=sRnSwz" style="font-size:small">[PDF]</a> <br> Essay submitted as a part of <a href="https://www.maths.cam.ac.uk/postgrad/part-iii/current/examinations-and-essays#Essay">Part III at Cambridge</a>.</li> 
+        <li><b>Finitely generated cones and associated moduli spaces</b> <a href="https://1drv.ms/b/s!AjrujelXofEXgkZqWN0p6iX9SZvJ?e=sRnSwz" style = "font-size: small">[PDF]</a> <br> <i>with D Ranganathan and D Townsend.</i> A summary of research done as a part of the <a href="https://www.maths.cam.ac.uk/opportunities/careers-for-mathematicians/summer-research-mathematics/information-for-students">CSRIM program</a>.</li>
         </ul>
- I sometimes document my explorations on this website, in the form of articles <a href="./posts.html"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a> and bite-sized gists <a href="./gists.html"><i class="fas fa-external-link-alt" style="font-size: 0.8rem;"></i></a>. Hope something catches your interest! 
+ I sometimes document my explorations on this website, in the form of <a href="./posts.html">articles</a> and byte-sized <a href="./gists.html">gists</a>. Hope something catches your interest! 
 </p>
 <hr>
 <p>
 <sc>Course Notes</sc>
 </p>
-<p>I did Part III in Cambridge in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ"><u>here</u></a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/"><u>here</u></a>.</p>
+<p>I did Part III in Cambridge in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>.</p>
+<hr>
+<p style="text-align:right; font-family:Hubballi"> p ‹dot› shimpi ‹dot› 1 ‹at› research ‹dot› gla ‹dot› ac ‹dot› uk</p>
