--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
 <p>
 <sc>Course Notes</sc>
 </p>
-<p>I did Part III in Cambridge in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>.</p>
+<p>I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>.</p>
 <hr>
-<p style="text-align:right; font-family:Hubballi"> p ‹dot› shimpi ‹dot› 1 ‹at› research ‹dot› gla ‹dot› ac ‹dot› uk</p>
+<p style="text-align:right; font-family:Hubballi"> p.shimpi.1 ‹at› research.gla.ac.uk</p>
