added singularities workshop to list

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
 <p>
     <sc>Seminars and Conferences</sc> 
     <ul>
+        <li><b><a href="https://sites.google.com/view/singularities-mirrors/home">Workshop on Singularities and Mirror Symmetry</a></b>, Glasgow. <sc style="font-size:small">[dec 5--7, 2022]</sc></li>
         <li><b><a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a></b>, Glasgow. <sc style="font-size:small">[nov 25, 2022]</sc>
         </li>
     </ul>
