--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
 <p>
     <sc>Conferences</sc> 
     <ul>
-        <li><b><a href="https://people.dm.unipi.it/dadderio/dobb2023">(Winter School) Geometry, Algebra and Combinatorics of Moduli Spaces and Configurations V</a></b>, Dobbiaco (Toblach). <sc style="font-size:small">[feb 20--24, 2023]</sc>
-        <li><b><a href="https://agmp.sites.sheffield.ac.uk/conferences/sieg-2023">Structures in Enumerative Geometry</a></b>, Sheffield. <sc style="font-size:small">[jan 23--27, 2023]</sc>
-        <li><b><a href="https://www.cantab.net/users/t.logvinenko/2023-qcms/index.html">Quivers, Clusters, Moduli and Stability</a></b>, Oxford. <sc style="font-size:small">[jan 9--13, 2023]</sc>
-        <li><b><a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a></b>, Glasgow. <sc style="font-size:small">[dec 9, 2022]</sc>
+        <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and Stacks in Algebraic Geometry and Algebraic Topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, 2023]</sc></li>
+        <li><b><a href="https://people.dm.unipi.it/dadderio/dobb2023">(Winter School) Geometry, Algebra and Combinatorics of Moduli Spaces and Configurations V</a></b>, Dobbiaco (Toblach). <sc style="font-size:small">[feb 20--24, 2023]</sc></li>
+        <li><b><a href="https://www.cantab.net/users/t.logvinenko/2023-qcms/index.html">Quivers, Clusters, Moduli and Stability</a></b>, Oxford. <sc style="font-size:small">[jan 9--13, 2023]</sc></li>
+        <li><b><a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a></b>, Glasgow. <sc style="font-size:small">[dec 9, 2022]</sc></li>
         <li><b><a href="https://sites.google.com/view/singularities-mirrors/home">Workshop on Singularities and Mirror Symmetry</a></b>, Glasgow. <sc style="font-size:small">[dec 5--7, 2022]</sc></li>
-        </li>
     </ul>
 </p>
 <hr>
 <p>
 <sc>Course Notes</sc>
 </p>
-<p>I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>.</p>
+<p>I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>. David Bai's typed notes can be found <a href="https://zb260.user.srcf.net/notes/">here</a>. </p>
 <hr>
 <p style="text-align:right; font-family:Hubballi"> p.shimpi.1 ‹at› research.gla.ac.uk</p>
