--- a/index.html
+++ b/index.html
@@ -29,17 +29,26 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
         <li><b>Derived equivalences in algebra and geometry</b>  <a href="https://1drv.ms/b/s!AjrujelXofEXgkZqWN0p6iX9SZvJ?e=sRnSwz" style="font-size:small">[PDF]</a> <br> Essay submitted as a part of <a href="https://www.maths.cam.ac.uk/postgrad/part-iii/current/examinations-and-essays#Essay">Part III at Cambridge</a>.</li> 
         <li><b>Finitely generated cones and associated moduli spaces</b><br> <i>with D Ranganathan and D Townsend.</i> Research done as a part of the <a href="https://www.maths.cam.ac.uk/opportunities/careers-for-mathematicians/summer-research-mathematics/information-for-students">CSRIM program</a>.</li>
         </ul>
- I sometimes document my explorations on this website, in the form of <a href="./posts.html">articles</a> and byte-sized <a href="./gists.html">gists</a>. Hope something catches your interest! 
+ I sometimes write expository <a href="./posts.html">articles</a> and byte-sized <a href="./gists.html">gists</a> on this website. Hope something catches your interest! 
+</p>
+<hr>
+<p>
+    <sc>Past and Upcoming Talks</sc> 
+    <ul>
+        <li><b>This pure mathematician forgot how to add. You won't believe what happened next!</b>  <a href="https://sites.google.com/view/pgseminar/home?authuser=0 ">Glasgow PG Seminar</a>, Glasgow. <sc style="font-size:small">[mar 10, 2023]</sc></li>
+        <li><b>Moduli spaces, G-clusters, and the Classical McKay Correspondence</b> (ahead of <a href="https://ncts.ntu.edu.tw/people_detail.php?gid=361&bgid=7">Ryo Yamagishi</a>: McKay Correspondence and the Moduli of G-Constellations). <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>, Glasgow. <sc style="font-size:small">[feb 1, 2023]</sc></li>
+        <li><b>What is a deformation?</b> <a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a>, Glasgow. <sc style="font-size:small">[dec 9, 2022]</sc></li>
+    </ul>
 </p>
 <hr>
 <p>
     <sc>Conferences and Travel</sc> 
     <ul>
-        <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and Stacks in Algebraic Geometry and Algebraic Topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, 2023]</sc></li>
-        <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Nordfjordeid Summer School on Higher Structures in Algebra and Geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, 2023]</sc></li>
+        <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and Stacks in Algebraic Geometry and Algebraic Topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, 2023][TBC]</sc></li>
+        <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Nordfjordeid Summer School on Higher Structures in Algebra and Geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, 2023][TBC]</sc></li>
+        <li><b><a href="https://sites.google.com/view/warwickcompalggeom/home">Computational Algebraic Geometry Workshop</a></b>, Warwick. <sc style="font-size:small">[mar 27--31, 2023]</sc></li>
         <li><b><a href="https://people.dm.unipi.it/dadderio/dobb2023">(Winter School) Geometry, Algebra and Combinatorics of Moduli Spaces and Configurations V</a></b>, Dobbiaco (Toblach). <sc style="font-size:small">[feb 20--24, 2023]</sc></li>
         <li><b><a href="https://www.cantab.net/users/t.logvinenko/2023-qcms/index.html">Quivers, Clusters, Moduli and Stability</a></b>, Oxford. <sc style="font-size:small">[jan 9--13, 2023]</sc></li>
-        <li><b><a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a></b>, Glasgow. <sc style="font-size:small">[dec 9, 2022]</sc></li>
         <li><b><a href="https://sites.google.com/view/singularities-mirrors/home">Workshop on Singularities and Mirror Symmetry</a></b>, Glasgow. <sc style="font-size:small">[dec 5--7, 2022]</sc></li>
     </ul>
 </p>
