--- a/index.html
+++ b/index.html
@@ -22,40 +22,77 @@ You can read more about me <a href="./about.html">here</a>.
 <p>
 I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> and the <a href="https://sites.google.com/view/erngglasgow/home">Enhancing RNG Group</a>, studying algebraic geometry and its interactions with representation theory and homological algebra.
 </p>
-<hr>
-<p>
-    <sc>Mathematical Writing</sc> 
-    <ul>
-        <li><b>Derived equivalences in algebra and geometry</b>  <a href="https://1drv.ms/b/s!AjrujelXofEXgkZqWN0p6iX9SZvJ?e=sRnSwz" style="font-size:small">[PDF]</a> <br> Essay submitted as a part of <a href="https://www.maths.cam.ac.uk/postgrad/part-iii/current/examinations-and-essays#Essay">Part III at Cambridge</a>.</li> 
-        <li><b>Finitely generated cones and associated moduli spaces</b><br> <i>with D Ranganathan and D Townsend.</i> Research done as a part of the <a href="https://www.maths.cam.ac.uk/opportunities/careers-for-mathematicians/summer-research-mathematics/information-for-students">CSRIM program</a>.</li>
-        </ul>
- I sometimes write expository <a href="./posts.html">articles</a> and byte-sized <a href="./gists.html">gists</a> on this website. Hope something catches your interest! 
-</p>
-<hr>
-<p>
-    <sc>Past and Upcoming Talks</sc> 
-    <ul>
-        <li><b>This pure mathematician forgot how to add. You won't believe what happened next!</b>  <a href="https://sites.google.com/view/pgseminar/home?authuser=0 ">Glasgow PG Seminar</a>, Glasgow. <sc style="font-size:small">[mar 10, 2023]</sc></li>
-        <li><b>Moduli spaces, G-clusters, and the Classical McKay Correspondence</b> (ahead of <a href="https://ncts.ntu.edu.tw/people_detail.php?gid=361&bgid=7">Ryo Yamagishi</a>: McKay Correspondence and the Moduli of G-Constellations). <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>, Glasgow. <sc style="font-size:small">[feb 1, 2023]</sc></li>
-        <li><b>What is a deformation?</b> <a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a>, Glasgow. <sc style="font-size:small">[dec 9, 2022]</sc></li>
-    </ul>
-</p>
-<hr>
-<p>
-    <sc>Conferences and Travel</sc> 
-    <ul>
-        <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and Stacks in Algebraic Geometry and Algebraic Topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, 2023][TBC]</sc></li>
-        <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Nordfjordeid Summer School on Higher Structures in Algebra and Geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, 2023][TBC]</sc></li>
-        <li><b><a href="https://sites.google.com/view/warwickcompalggeom/home">Computational Algebraic Geometry Workshop</a></b>, Warwick. <sc style="font-size:small">[mar 27--31, 2023]</sc></li>
-        <li><b><a href="https://people.dm.unipi.it/dadderio/dobb2023">(Winter School) Geometry, Algebra and Combinatorics of Moduli Spaces and Configurations V</a></b>, Dobbiaco (Toblach). <sc style="font-size:small">[feb 20--24, 2023]</sc></li>
-        <li><b><a href="https://www.cantab.net/users/t.logvinenko/2023-qcms/index.html">Quivers, Clusters, Moduli and Stability</a></b>, Oxford. <sc style="font-size:small">[jan 9--13, 2023]</sc></li>
-        <li><b><a href="https://sites.google.com/view/singularities-mirrors/home">Workshop on Singularities and Mirror Symmetry</a></b>, Glasgow. <sc style="font-size:small">[dec 5--7, 2022]</sc></li>
-    </ul>
-</p>
-<hr>
-<p>
-<sc>Course Notes</sc>
-</p>
-<p>I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>. David Bai's typed notes can be found <a href="https://zb260.user.srcf.net/notes/">here</a>. </p>
+
+<hr class="phone-only">
+
+<input id="panel-1-ctrl" class="panel-radios" type="radio" name="tab-radios" checked>
+<input id="panel-2-ctrl" class="panel-radios" type="radio" name="tab-radios">
+<input id="panel-3-ctrl" class="panel-radios" type="radio" name="tab-radios">
+<input id="panel-4-ctrl" class="panel-radios" type="radio" name="tab-radios">
+<input id="panel-5-ctrl" class="panel-radios" type="radio" name="tab-radios">
+<input id="nav-ctrl" class="panel-radios" type="checkbox" name="nav-checkbox">
+
+<ul id="tabs-list"> 
+    <label id="open-nav-label" for="nav-ctrl">
+        <div class="hamburger hamburger--elastic" type="button"> 
+            <div class="hamburger-box"> <div class="hamburger-inner"></div></div>
+        </div>
+    </label>
+    <li id="li-for-panel-1"><label class="panel-label" for="panel-1-ctrl">Writing</label></li>
+    <li id="li-for-panel-2"><label class="panel-label" for="panel-2-ctrl">Talks</label></li>
+    <li id="li-for-panel-3"><label class="panel-label" for="panel-3-ctrl">Travels</label></li>
+    <li id="li-for-panel-4"><label class="panel-label" for="panel-4-ctrl">Teaching</label></li>
+    <li id="li-for-panel-5"><label class="panel-label" for="panel-5-ctrl">Notes</label></li> 
+</ul>
+
+<script language="Javascript">
+  var hamburger = document.querySelector(".hamburger");
+  hamburger.addEventListener("click", function() {hamburger.classList.toggle("is-active");});
+</script>
+
+<div id="panels">
+  <div class="container">
+    <section id="panel-1">
+      <main> 
+          <ul> 
+              <li><b>Derived equivalences in algebra and geometry</b>  <a href="https://1drv.ms/b/s!AjrujelXofEXgkZqWN0p6iX9SZvJ?e=sRnSwz" style="font-size:small">[PDF]</a> <br> Essay submitted as a part of <a href="https://www.maths.cam.ac.uk/postgrad/part-iii/current/examinations-and-essays#Essay">Part III at Cambridge</a>.</li> 
+              <li><b>Finitely generated cones and associated moduli spaces</b><br> <i>with D Ranganathan and D Townsend.</i> Research done as a part of the <a href="https://www.maths.cam.ac.uk/opportunities/careers-for-mathematicians/summer-research-mathematics/information-for-students">CSRIM program</a>.</li> 
+          </ul> 
+          I sometimes write expository <a href="./posts.html">articles</a> and byte-sized <a href="./gists.html">gists</a> on this website. Hope something catches your interest!  
+      </main>
+    </section>
+    <section id="panel-2">
+      <main> 
+          <ul> 
+              <li><b>This pure mathematician forgot how to add. You won't believe what happened next!</b>  <a href="https://sites.google.com/view/pgseminar/home?authuser=0 ">Glasgow PG Seminar</a>, Glasgow. <sc style="font-size:small">[mar 10, 2023]</sc></li> 
+              <li><b>Moduli spaces, G-clusters, and the Classical McKay Correspondence</b> (ahead of <a href="https://ncts.ntu.edu.tw/people_detail.php?gid=361&bgid=7">Ryo Yamagishi</a>: McKay Correspondence and the Moduli of G-Constellations). <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>, Glasgow. <sc style="font-size:small">[feb 1, 2023]</sc></li> 
+              <li><b>What is a deformation?</b> <a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a>, Glasgow. <sc style="font-size:small">[dec 9, 2022]</sc></li> 
+          </ul>
+      </main>
+    </section>
+    <section id="panel-3">
+      <main> 
+          <ul> 
+              <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and Stacks in Algebraic Geometry and Algebraic Topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, 2023][TBC]</sc></li>
+              <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Nordfjordeid Summer School on Higher Structures in Algebra and Geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, 2023][TBC]</sc></li> 
+              <li><b><a href="https://sites.google.com/view/warwickcompalggeom/home">Computational Algebraic Geometry Workshop</a></b>, Warwick. <sc style="font-size:small">[mar 27--31, 2023]</sc></li> 
+              <li><b><a href="https://people.dm.unipi.it/dadderio/dobb2023">(Winter School) Geometry, Algebra and Combinatorics of Moduli Spaces and Configurations V</a></b>, Dobbiaco (Toblach). <sc style="font-size:small">[feb 20--24, 2023]</sc></li> 
+              <li><b><a href="https://www.cantab.net/users/t.logvinenko/2023-qcms/index.html">Quivers, Clusters, Moduli and Stability</a></b>, Oxford. <sc style="font-size:small">[jan 9--13, 2023]</sc></li> 
+              <li><b><a href="https://sites.google.com/view/singularities-mirrors/home">Workshop on Singularities and Mirror Symmetry</a></b>, Glasgow. <sc style="font-size:small">[dec 5--7, 2022]</sc></li> 
+          </ul>
+      </main>
+    </section>
+    <section id="panel-4">
+      <main>
+      </main>
+    </section>
+    <section id="panel-5">
+      <main> 
+          <p>I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>. David Bai's typed notes can be found <a href="https://zb260.user.srcf.net/notes/">here</a>. </p>
+      </main>
+    </section>
+  </div>
+</div>
+
 <hr>
 <p style="text-align:right; font-family:Hubballi"> parth.shimpi ‹at› glasgow.ac.uk</p>
