updated homepage content

--- a/index.html
+++ b/index.html
@@ -53,40 +53,50 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
 <br class="big-screen-only"></br>
 <div id="panels">
   <div class="container">
-    <section id="panel-1">
-      <main> 
-          <ul> 
-              <li><b>Derived equivalences in algebra and geometry</b>  <a href="https://1drv.ms/b/s!AjrujelXofEXgkZqWN0p6iX9SZvJ?e=sRnSwz" style="font-size:small">[PDF]</a> <br> Essay submitted as a part of <a href="https://www.maths.cam.ac.uk/postgrad/part-iii/current/examinations-and-essays#Essay">Part III at Cambridge</a>.</li> 
-              <li><b>Finitely generated cones and associated moduli spaces</b><br> <i>with D Ranganathan and D Townsend.</i> Research done as a part of the <a href="https://www.maths.cam.ac.uk/opportunities/careers-for-mathematicians/summer-research-mathematics/information-for-students">CSRIM program</a>.</li> 
-          </ul> 
-          I sometimes write expository <a href="./posts.html">articles</a> and byte-sized <a href="./gists.html">gists</a> on this website. Hope something catches your interest!  
-      </main>
-    </section>
-    <section id="panel-2">
-      <main> 
-          <ul> 
-              <li><b>This pure mathematician forgot how to add. You won't believe what happened next!</b>  <a href="https://sites.google.com/view/pgseminar/home?authuser=0 ">Glasgow PG Seminar</a>, Glasgow. <sc style="font-size:small">[mar 10, 2023]</sc></li> 
-              <li><b>Moduli spaces, G-clusters, and the Classical McKay Correspondence</b> (ahead of <a href="https://ncts.ntu.edu.tw/people_detail.php?gid=361&bgid=7">Ryo Yamagishi</a>: McKay Correspondence and the Moduli of G-Constellations). <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>, Glasgow. <sc style="font-size:small">[feb 1, 2023]</sc></li> 
-              <li><b>What is a deformation?</b> <a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a>, Glasgow. <sc style="font-size:small">[dec 9, 2022]</sc></li> 
-          </ul>
-      </main>
-    </section>
-    <section id="panel-3">
-      <main> 
-          <ul> 
-              <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and Stacks in Algebraic Geometry and Algebraic Topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, 2023][TBC]</sc></li>
-              <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Nordfjordeid Summer School on Higher Structures in Algebra and Geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, 2023][TBC]</sc></li> 
-              <li><b><a href="https://sites.google.com/view/warwickcompalggeom/home">Computational Algebraic Geometry Workshop</a></b>, Warwick. <sc style="font-size:small">[mar 27--31, 2023]</sc></li> 
-              <li><b><a href="https://people.dm.unipi.it/dadderio/dobb2023">(Winter School) Geometry, Algebra and Combinatorics of Moduli Spaces and Configurations V</a></b>, Dobbiaco (Toblach). <sc style="font-size:small">[feb 20--24, 2023]</sc></li> 
-              <li><b><a href="https://www.cantab.net/users/t.logvinenko/2023-qcms/index.html">Quivers, Clusters, Moduli and Stability</a></b>, Oxford. <sc style="font-size:small">[jan 9--13, 2023]</sc></li> 
-              <li><b><a href="https://sites.google.com/view/singularities-mirrors/home">Workshop on Singularities and Mirror Symmetry</a></b>, Glasgow. <sc style="font-size:small">[dec 5--7, 2022]</sc></li> 
-          </ul>
-      </main>
-    </section>
-    <section id="panel-4">
-      <main>
-      </main>
-    </section>
+    <section id="panel-1"><main> 
+          <p>The articles below are largely expository.</p>
+          <ol class="homepage-list"> 
+              <li><b>"Invitation to Deformation Theory",</b> with J Malbon and D Z Zieba (2023). <a href="documents/2023-deformation-theory.pdf" style="font-size:small">[PDF]</a></li>
+              <li><b>"Derived equivalences in algebra and geometry",</b> supervised by I Grojnowski, <a href="https://www.maths.cam.ac.uk/postgrad/part-iii/current/examinations-and-essays#Essay">Part III essay</a>, University of Cambridge (2022). <a href="documents/2022-part-iii-essay.pdf" style="font-size:small">[PDF]</a></li> 
+          </ol> 
+          <p>The website also has an informal <a href="./posts.html">blog</a> and some <a href="./gists.html">shorter articles</a>.</p> 
+    </main></section>
+    <section id="panel-2"><main> 
+            <p></p>
+          <ol class="homepage-list"> 
+              <li><b>"Log Calabi-Yau and cluster varieties"</b>,  ahead of <a href="https://www.kcl.ac.uk/people/tim-magee">Tim Magee</a>: "Grassmannians, plabic graphs, and mirror symmetry for cluster varieties", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[mar 22, '23]</sc></li> 
+              <li><b>"Quiver moduli and geometric invariant theory"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[mar 3, '23]</sc></li> 
+              <li><b>"This pure mathematician forgot how to add. You won't believe what happened next!"</b>,  <a href="https://sites.google.com/view/pgseminar/home?authuser=0 ">Glasgow PG Seminar</a>. <sc style="font-size:small">[mar 10, '23]</sc></li> 
+              <li><b>"Moduli spaces, G-clusters, and the McKay correspondence"</b>, ahead of <a href="https://ncts.ntu.edu.tw/people_detail.php?gid=361&bgid=7">Ryo Yamagishi</a>: "McKay Correspondence and the Moduli of G-Constellations", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[feb 1, '23]</sc></li> 
+              <li><b>What is a deformation?</b> <a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a>. <sc style="font-size:small">[dec 9, '22]</sc></li> 
+              <li><b>The module extension problem</b>, Part III Seminar. <sc style="font-size:small">[mar 18, '22]</sc></li> 
+              <li><b>The module extension problem</b>, Part III Seminar. <sc style="font-size:small">[mar 18, '22]</sc></li> 
+              <li><b>The functor of points</b>, Part III Seminar. <sc style="font-size:small">[dec 2, '21]</sc></li> 
+              <li><b>Between arbitrarily large and infinite</b>, <a href="https://archim.org.uk">The Archimedeans</a>. <sc style="font-size:small"><a href ="https://youtu.be/fkfRrVVX-Kc">[video]</a> [apr 10, '20]</sc></li> 
+          </ol> 
+    </main> </section> 
+    <section id="panel-3"><main> 
+          <p>Past and upcoming conferences and academic workshops .</p>
+          <ol class="homepage-list"> 
+              <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and stacks in algebraic geometry and algebraic topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, '23][TBC]</sc></li>
+              <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Summer school on higher structures in algebra and geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, '23][TBC]</sc></li> 
+              <li><b><a href="https://sites.google.com/view/warwickcompalggeom/home">Computational algebraic geometry workshop</a></b>, Warwick. <sc style="font-size:small">[mar 27--31, '23]</sc></li> 
+              <li><b><a href="https://people.dm.unipi.it/dadderio/dobb2023">Winter school on geometry, algebra and combinatorics of moduli spaces and configurations V</a></b>, Dobbiaco (Toblach). <sc style="font-size:small">[feb 20--24, '23]</sc></li> 
+              <li><b><a href="https://www.cantab.net/users/t.logvinenko/2023-qcms/index.html">Quivers, clusters, moduli and stability</a></b>, Oxford. <sc style="font-size:small">[jan 9--13, '23]</sc></li> 
+              <li><b><a href="https://sites.google.com/view/singularities-mirrors/home">Workshop on singularities and mirror symmetry</a></b>, Glasgow. <sc style="font-size:small">[dec 5--7, 2022]</sc></li> 
+          </ol>
+        </main></section>
+    <section id="panel-4"><main>
+            <p></p>
+            <ol class="homepage-list">
+                <li><b>Tutor, University of Glasgow:</b> 2T Discrete Mathematics ('22), 2E Mechanics ('22).</li>
+                <li><b>Mentor, STEP Support Programme</b> ('19, '20, '21).</li>
+                <li><b>Tutor, <a href ="https://www.undergraduate.study.cam.ac.uk/events/summer-schools">Sutton Trust Summer School</a>:</b> Combinatorics ('19).</li>
+                <li><b>Teacher, <a href = "https://fia.edu.in">Fravashi International Academy</a>:</b> A level Pure mathematics ('19), A level Statistics ('19).</li>
+            </ol>
+
+            <p>I have previously provided personal tuition to highschool students for <a href="http://www.admissionstesting.org/for-test-takers/step/about-step/">STEP</a> and similar exams, and am open to taking new students.</p>
+    </main></section>
     <section id="panel-5">
       <main> 
           <p>I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>. David Bai's typed notes can be found <a href="https://zb260.user.srcf.net/notes/">here</a>. </p>
