added misc entries, talks and model theory write-up

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
     <section id="panel-1"><main> 
           <p>The articles below are largely expository.</p>
           <ol class="homepage-list"> 
-              <li><b>"Invitation to Deformation Theory",</b> with J Malbon and D Z Zieba (2023). <a href="documents/2023-deformation-theory.pdf" style="font-size:small">[PDF]</a></li>
-              <li><b>"Derived equivalences in algebra and geometry",</b> supervised by I Grojnowski, <a href="https://www.maths.cam.ac.uk/postgrad/part-iii/current/examinations-and-essays#Essay">Part III essay</a>, University of Cambridge (2022). <a href="documents/2022-part-iii-essay.pdf" style="font-size:small">[PDF]</a></li> 
+              <li><b>"Invitation to Deformation Theory",</b> with J Malbon and D Z Zieba ('23). <a href="documents/2023-deformation-theory.pdf" style="font-size:small">[PDF]</a></li>
+              <li><b>"Derived equivalences in algebra and geometry",</b> supervised by I Grojnowski, <a href="https://www.maths.cam.ac.uk/postgrad/part-iii/current/examinations-and-essays#Essay">Part III essay</a>, University of Cambridge ('22). <a href="documents/2022-part-iii-essay.pdf" style="font-size:small">[PDF]</a></li> 
+              <li><b>"Introduction to Model Theory",</b> supervised by G Wilsenach, Summer project summary, University of Cambridge ('19). <a href="documents/2019-model-theory.pdf" style="font-size:small">[PDF]</a></li> 
           </ol> 
           <p>The website also has an informal <a href="./posts.html">blog</a> and some <a href="./gists.html">shorter articles</a>.</p> 
     </main></section>
@@ -72,6 +73,7 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
               <li><b>The module extension problem</b>, Part III Seminar. <sc style="font-size:small">[mar 18, '22]</sc></li> 
               <li><b>The module extension problem</b>, Part III Seminar. <sc style="font-size:small">[mar 18, '22]</sc></li> 
               <li><b>The functor of points</b>, Part III Seminar. <sc style="font-size:small">[dec 2, '21]</sc></li> 
+              <li><b>Quasisymmetric functions in geometry</b>, <a href="https://www.maths.cam.ac.uk/opportunities/careers-for-mathematicians/summer-research-mathematics/information-for-students">CSRIM</a> Seminar. <sc style="font-size:small"><a href="documents/2021-summer-project-slides.pdf">[slides]</a> [oct 12, '21]</sc></li>
               <li><b>Between arbitrarily large and infinite</b>, <a href="https://archim.org.uk">The Archimedeans</a>. <sc style="font-size:small"><a href ="https://youtu.be/fkfRrVVX-Kc">[video]</a> [apr 10, '20]</sc></li> 
           </ol> 
     </main> </section> 
@@ -80,6 +82,7 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
           <ol class="homepage-list"> 
               <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and stacks in algebraic geometry and algebraic topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, '23][TBC]</sc></li>
               <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Summer school on higher structures in algebra and geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, '23][TBC]</sc></li> 
+              <li><b><a href=" https://sites.google.com/view/derivedfrg/events/imperial-2023?authuser=0">Derived categories, moduli spaces, and counting invariants</a></b>, London. <sc style="font-size:small">[jul 3--7, '23]</sc></li> 
               <li><b><a href="https://sites.google.com/view/warwickcompalggeom/home">Computational algebraic geometry workshop</a></b>, Warwick. <sc style="font-size:small">[mar 27--31, '23]</sc></li> 
               <li><b><a href="https://people.dm.unipi.it/dadderio/dobb2023">Winter school on geometry, algebra and combinatorics of moduli spaces and configurations V</a></b>, Dobbiaco (Toblach). <sc style="font-size:small">[feb 20--24, '23]</sc></li> 
               <li><b><a href="https://www.cantab.net/users/t.logvinenko/2023-qcms/index.html">Quivers, clusters, moduli and stability</a></b>, Oxford. <sc style="font-size:small">[jan 9--13, '23]</sc></li> 
@@ -99,7 +102,11 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
     </main></section>
     <section id="panel-5">
       <main> 
-          <p>I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>. David Bai's typed notes can be found <a href="https://zb260.user.srcf.net/notes/">here</a>. </p>
+          <p><b>Course notes.</b> I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>. David Bai's typed notes can be found <a href="https://zb260.user.srcf.net/notes/">here</a>.</p>
+          <p><a href="https://thecatbus.github.io/RunMyDFA"><b>RunMyDFA.</b></a> An online wysiwyg editor for finite automata/Markov chain diagrams that can simulate deterministic finite automata and generate TikZ code.</p>
+          <p><a href="https://github.com/thecatbus/tex-template/"><b>TeX template.</b></a> I maintain a template for LaTeX documents with essential imports and helpful macros for algebraic geometers. There's also a TeX-specific <code>.gitignore</code> file included! To set up a new project, run the script below in a command line.
+          <pre><code>curl -L -O https://github.com/thecatbus/tex-template/archive/main.zip && unzip main.zip && rm main.zip</code></pre>
+          </p>
       </main>
     </section>
   </div>
