--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
     <section id="panel-2"><main> 
             <p></p>
           <ol class="homepage-list"> 
+              <li><b>"Associated points and other properties of schemes"</b>, <a href="https://malthefogsporring.github.io/algebraic-geometry/">Eisenboaties</a>. <sc style="font-size:small">[apr 14, '23]</sc></li> 
               <li><b>"Log Calabi-Yau and cluster varieties"</b>,  ahead of <a href="https://www.kcl.ac.uk/people/tim-magee">Tim Magee</a>: "Grassmannians, plabic graphs, and mirror symmetry for cluster varieties", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[mar 22, '23]</sc></li> 
               <li><b>"Quiver moduli and geometric invariant theory"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[mar 3, '23]</sc></li> 
               <li><b>"This pure mathematician forgot how to add. You won't believe what happened next!"</b>,  <a href="https://sites.google.com/view/pgseminar/home?authuser=0 ">Glasgow PG Seminar</a>. <sc style="font-size:small">[mar 10, '23]</sc></li> 
