--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
             <p></p>
           <ol class="homepage-list">
               <li><b>"Singularities of the minimal model program"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[apr 28, '23]</sc></li>
-              <li><b>"Reviewing the representation theory of finite dimensional algebras"</b>,  ahead of Isambard Goodbody: "Finite dimensional DGAs", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[apr 26, '23]</sc></li>
+              <li><b>"Representation theory of finite dimensional algebras"</b>,  ahead of Isambard Goodbody: "Finite dimensional DGAs", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[apr 26, '23]</sc></li>
               <li><b>"Associated points and other properties of schemes"</b>, <a href="https://malthefogsporring.github.io/algebraic-geometry/">Eisenboaties</a>. <sc style="font-size:small">[apr 14, '23]</sc></li>
               <li><b>"Log Calabi-Yau and cluster varieties"</b>,  ahead of <a href="https://www.kcl.ac.uk/people/tim-magee">Tim Magee</a>: "Grassmannians, plabic graphs, and mirror symmetry for cluster varieties", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[mar 22, '23]</sc></li>
               <li><b>"Quiver moduli and geometric invariant theory"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[mar 3, '23]</sc></li>
