--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
     <section id="panel-2"><main>
             <p></p>
           <ol class="homepage-list">
+              <li><b>"Coherent sheaves on the Riemann Sphere"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[jun 9, '23]</sc></li>
               <li><b>"Singularities of the minimal model program"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[apr 28, '23]</sc></li>
               <li><b>"Representation theory of finite dimensional algebras"</b>,  ahead of Isambard Goodbody: "Finite dimensional DGAs", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[apr 26, '23]</sc></li>
               <li><b>"Associated points and other properties of schemes"</b>, <a href="https://malthefogsporring.github.io/algebraic-geometry/">Eisenboaties</a>. <sc style="font-size:small">[apr 14, '23]</sc></li>
