--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
     <section id="panel-2"><main>
             <p></p>
           <ol class="homepage-list">
+              <li><b>"Bondal and Orlov's reconstruction of a variety from its derived category"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[jul 28, '23]</sc></li>
               <li><b>"Coherent sheaves on the Riemann Sphere"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[jun 9, '23]</sc></li>
               <li><b>"Singularities of the minimal model program"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[apr 28, '23]</sc></li>
               <li><b>"Representation theory of finite dimensional algebras"</b>,  ahead of Isambard Goodbody: "Finite dimensional DGAs", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[apr 26, '23]</sc></li>
@@ -84,7 +85,7 @@ I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a> a
           <p>Past and upcoming conferences and academic workshops .</p>
           <ol class="homepage-list">
               <li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and stacks in algebraic geometry and algebraic topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, '23][TBC]</sc></li>
-              <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Summer school on higher structures in algebra and geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, '23][TBC]</sc></li>
+              <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Summer school on higher structures in algebra and geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, '23]</sc></li>
               <li><b><a href=" https://sites.google.com/view/derivedfrg/events/imperial-2023?authuser=0">Derived categories, moduli spaces, and counting invariants</a></b>, London. <sc style="font-size:small">[jul 3--7, '23]</sc></li>
               <li><b><a href="https://sites.google.com/sheffield.ac.uk/glen2023/home">Derived categories, Hodge theory, and singularities</a></b>, Sheffield. <sc style="font-size:small">[jun 28--30, '23]</sc></li>
               <li><b><a href="https://sites.google.com/view/warwickcompalggeom/home">Computational algebraic geometry workshop</a></b>, Warwick. <sc style="font-size:small">[mar 27--31, '23]<a href="./images/conf-warwick-2023.jpg">[photo]</a></sc></li>
