--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ This year, I am a co-organiser of the <a href="https://sites.google.com/view/gla
           <p>Past and upcoming conferences and academic workshops .</p>
           <ol class="homepage-list">
               <li><b><!--a href=""-->Mini-workshop 2405a: Artin groups meet triangulated categories</a></b>, Oberwolfach. <sc style="font-size:small">[jan 28--feb 2, '24]</sc></li>
+              <li><b><!--a href=""-->UKAGNetwork winter school</a></b>, Warwick. <sc style="font-size:small">[dec 12--15, '23]</sc></li>
               <li><b><a href="https://pcwww.liv.ac.uk/~arizzard/GLEN/GLEN2023.html">GLEN workshop on stability conditions</a></b>, Liverpool. <sc style="font-size:small">[sep 21--22, '23]</sc></li>
               <li><b><a href="https://www.liverpool.ac.uk/mathematical-sciences/research/pure-mathematics/research/dynamical-systems/bridgeland-stability/">Bridgeland stability spaces and complex function theory</a></b>, Liverpool. <sc style="font-size:small">[sep 19--21, '23]</sc></li>
               <!--<li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and stacks in algebraic geometry and algebraic topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, '23][TBC]</sc></li>-->
