--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@ This year, I am a co-organiser of the <a href="https://sites.google.com/view/gla
     </main></section>
     <section id="panel-5">
       <main>
-          <p><b>Course notes.</b> I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>. David Bai's typed notes can be found <a href="https://zb260.user.srcf.net/notes/">here</a>.</p>
+          <p><b>Course notes.</b> I did Part III in 2022, doing courses on algebra and geometry. The lecture notes for these can be found <a href="https://1drv.ms/u/s!AjrujelXofEXgR0CLEmkabiw5cpY?e=jfwYlZ">here</a>. Alejandro Epelde Blanco took many of the same courses and maintains his notes <a href="https://ae433.user.srcf.net/cambridge-notes/">here</a>. David Bai's typed notes can be found <a href="https://zb260.user.srcf.net/notes/">here</a>.
+
+          In 2023 I attended a lecture course on Riemann surfaces. The notes I
+          took for the course can be found <a href="./documents/2023-riemann-surfaces.pdf">here</a>.</p>
           <p><a href="https://thecatbus.github.io/RunMyDFA"><b>RunMyDFA.</b></a> An online wysiwyg editor for finite automata/Markov chain diagrams that can simulate deterministic finite automata and generate TikZ code.</p>
           <p><a href="https://github.com/thecatbus/tex-template/"><b>TeX template.</b></a> I maintain a template for LaTeX documents with essential imports and helpful macros for algebraic geometers. There's also a TeX-specific <code>.gitignore</code> file included! To set up a new project, run the script below in a command line.
           <pre><code>curl -L -O https://github.com/thecatbus/tex-template/archive/main.zip && unzip main.zip && rm main.zip</code></pre>
